styles/Contact.module.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&family=Roboto+Slab:wght@100..900&display=swap');

/* Logo section */
.logoTitle {
    display: flex;
    align-items: center;
    gap: 20px; /* Space between logo and text */
}

.logoImg {
    border-radius: 30%;
}

.logo {
    font-weight: 400;
    font-size: 20px;
    color: #d8d6d6;
    line-height: 1; /* No extra spacing */
    font-family: "Roboto Slab", serif;
}

.logo span {
    display: block;
    font-size: 14px; /* Smaller subtitle */
    color: #a6adba;
    margin-top: 4px;
}

.logo:hover {
    color: #fff;
    text-decoration: none;
}

@media (max-width: 768px) {
  .navbar {
    flex-direction: column;
    padding: 16px 10%;
  }

  .navLinks {
    flex-direction: column;
    gap: 1rem;
    margin-top: 10px;
  }

  .navLinks a {
    font-size: 14px;
  }
}

/* Main content spacing */
.main {
  margin-top: 100px; /* Offset for the fixed navbar */
  padding: 20px;
}

#contact {
  width: 100%;
  height: 100%;
}

.sectionHeader {
  text-align: center;
  margin: 0 auto;
  margin-top: auto;
  margin-bottom: 30px;
  font: 300 60px 'Oswald', sans-serif;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: 6px;
}

.contactWrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0 auto;
  padding: 20px;
  position: relative;
  max-width: 850px;
}

/* Left contact page */
.formHorizontal {
  float: left;
  max-width: 400px;
  font-family: 'Lato';
  font-weight: 400;
  margin-bottom: 20px;
}

.formControl {
  width: 100%;
  /* max-width: 400px; */
  /* max-height: 400px; */
  padding: 10px;
  border: 1.2px solid #dddcdc;
  border-radius: 5px;
  background-color: #1a222b;
  margin-bottom: 15px;
  color: #fff;
  letter-spacing: 1px;
}

.formControl:focus {
    border: 2px solid #006aff !important;
    box-shadow: 0 0 20px rgba(51, 122, 183, 1.8); /* Blue glowing effect */
    border-radius: 5px;
}

.formControl textarea { 
  resize: none;
  max-width: 400px;
  background-color: #1a222b;
  color: #fff;
  letter-spacing: 1px;
}

.formControl::placeholder {
  color: #d1d0d0;
  font-size: 14px;
}

.sendButton {
  margin-top: 10px;
  height: 36px;
  width: 400px;
  overflow: hidden;
  transition: all .2s ease-in-out;
  border-radius: 5px;
  border-color: #337ab7;
  background-color: #337ab7;
}

.altSendButton {
  width: 400px;
  height: 34px;
  transition: all .2s ease-in-out;
}

.sendText {
  display: block;
  margin-top: 9px;
  font: 700 12px 'Lato', sans-serif;
  color: #fff;
  letter-spacing: 2px;
}

.paperPlane {
    margin-top: 4px;
}

.altSendButton:hover {
  transform: translate3d(0px, -29px, 0px);
}

/* Begin Right Contact Page */
.directContactContainer {
  max-width: 400px;
}

.contactList {
  list-style-type: none;
  /* padding-right: 20px; */
}

.listItem {
  line-height: 4;
  color: #aaa;
  margin-bottom: 30px;
}

.contactText {
  font: 300 18px 'Lato', sans-serif;
  letter-spacing: 1.9px;
  color: #bbb;
}

.place {
  margin-left: 62px;
}

.phone {
  margin-left: 56px;
}

.gmail {
  margin-left: 53px;
}

.contactText a {
  color: #bbb;
  text-decoration: none;
  transition-duration: 0.2s;
}

.contactText a:hover {
  color: #fff;
  text-decoration: none;
}

/* Social Media Icons */
.socialMediaList {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0;
  margin-top: 10px; 
}

.socialMediaList li a {
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.socialMediaList li {
  position: relative; 
  display: flex;
  justify-content: center;
  align-items: center;
  height: 60px;
  width: 60px;
  margin: 10px 10px;
  margin-left: 10px;
  line-height: 60px;
  border-radius: 50%;
  background-color: rgb(27,27,27);
  cursor: pointer; 
  transition: all .2s ease-in-out;
}

.socialMediaList li:after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 60px;
  height: 60px;
  line-height: 60px;
  border-radius: 50%;
  opacity: 0;
  box-shadow: 0 0 0 1px #fff;
  transition: all .2s ease-in-out;
}

.socialMediaList li:hover {
  background-color: #fff; 
}

.socialMediaList li:hover:after {
  opacity: 1;  
  transform: scale(1.12);
  transition-timing-function: cubic-bezier(0.37,0.74,0.15,1.65);
}

.socialMediaList li:hover a {
  color: #000;
}

.socialMediaList img {
  width: 32px;
  height: 32px;
  object-fit: contain;
}

/* Begin Media Queries*/
@media screen and (max-width: 850px) {
  .contactWrapper {
    display: flex;
    flex-direction: column;
  }
  .directContactContainer, .formHorizontal {
    margin: 0 auto;
  }  

  .directContactContainer {
    margin-top: 60px;
    max-width: 300px;
  }    
  .socialMediaList li {
    height: 60px;
    width: 60px;
    line-height: 60px;
  }

  .formControl {
    width: 295px;
  }

  .sectionHeader {
    margin-bottom: 10%;
    padding: 0;
  }

  .sendButton {
    width: 295px;
  }
  .altSendButton {
    width: 295px;
  }
  .socialMediaList li:after {
    width: 60px;
    height: 60px;
    line-height: 60px;
  }
  .main {
    margin-top: 30%;
  }
}

@media screen and (max-width: 569px) {
  .directContactContainer, .formWrapper {
    float: none;
    margin: 0 auto;
  }  
  .formControl textarea {
    height: 150px;
    resize: none;
  }

  #name, #email textarea {
    width: 280px;
  } 

  .directContactContainer {
    margin-top: 60px;
    max-width: 280px;
  }  
  .socialMediaList {
    left: 0;
  }
  .socialMediaList li {
    height: 55px;
    width: 55px;
    line-height: 55px;
    font-size: 2rem;
  }
  .socialMediaList li:after {
    width: 55px;
    height: 55px;
    line-height: 55px;
  }
  .main {
    margin-top: 40%;
  }
}

/* @media screen and (max-width: 410px) {
  .sendButton {
    width: 99%;
  }
} */

.contactIconLineBreak {
  border: 1px solid #828282;
  width: 100%; 
  margin-top: 5%; 
}

